Feature/BES-Implement Battery Energy Simulation